# asi-project-11

./: .gitignore  Main.py  README.md  TASKS.md
package-initial/: README.md  setup.py
passStren/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  strength_detection.ipynb  train_model.py
passStren/.dvc/: .gitignore  config
passStren/ansible-ci-cd/: .gitignore  compose.yaml  inventory.yaml  playbook.yaml
passStren/ansible-ci-cd/dockerd/: Dockerfile
passStren/data/: .gitignore  password_data.csv.dvc
passStren/passstren/: __init__.py  cli.py  optuna_tuning.py  pycaret_model.py
