[project]
name = "Asi-11c-Sprint1"
version = "0.0.1"
description = "1st Sprint from 11cGroup"
authors = [
    {name = "JMordal", email = "s26839@pejot.edu.pl"},
    {name = "KTomala", email = "s27560@pejot.edu.pl"},
    {name = "ODinul", email = "s25578@pejot.edu.pl"},
    {name = "DAkmurat", email = "s25674@pejot.edu.pl"}
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "dvc>=3.64.0",
    "jupyterlab>=4.5.0",
]
