[project]
name = "asi_11c_sprint1"
version = "0.0.1"
description = "1st Sprint from 11cGroup"
authors = [
    {name = "JMordal", email = "s26839@pejot.edu.pl"},
    {name = "KTomala", email = "s27560@pejot.edu.pl"},
    {name = "ODinul", email = "s25578@pejot.edu.pl"},
    {name = "DAkmurat", email = "s25674@pejot.edu.pl"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "dvc>=3.64.0",
    "jupyterlab>=4.5.0"
]

[tool.setuptools.packages.find]
where = ["."]
