[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asi_11c_sprint1"
version = "0.0.1"
description = "11 project"
authors = [
    {name = "xxxxx", email = "xxxxx@pejot.edu.pl"},
]
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=1.23.0",
    "pandas>=2.0.0,<2.2.0",
    "scikit-learn>=1.3.0",
    "pycaret>=3.3.0",
    "optuna>=3.0.0",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "dvc>=3.64.0",
    "jupyterlab>=4.5.0"
]

[project.scripts]
passstren = "passstren.cli:main"

[tool.setuptools.packages.find]
where = ["."]
